# csv-with-aws-glue

./: .gitignore  README.md  pyproject.toml
data/csv-sample/p_day=0/: all-fields.csv
data/csv-sample/p_day=1/: some-empty-fields.csv
data/csv-sample/p_day=2/: field-changes.csv
data/csv-sample/p_day=3/: empty-record.csv
data/csv-sample/p_day=4/: header-only.csv
notebooks/: scratch-notebook.ipynb
sample-data/csv-sample/p_day=0/: all-fields.csv
sample-data/csv-sample/p_day=1/: some-empty-fields.csv
sample-data/csv-sample/p_day=2/: field-changes.csv
sample-data/csv-sample/p_day=3/: empty-record.csv
sample-data/csv-sample/p_day=4/: header-only.csv
sample-data/parquet-sample/p_day=0/: all-fields.parquet
sample-data/parquet-sample/p_day=1/: some-empty-fields.parquet
sample-data/parquet-sample/p_day=2/: field-changes.parquet
sample-data/parquet-sample/p_day=3/: empty-record.parquet
sample-data/parquet-sample/p_day=4/: header-only.parquet
src/csv_glue_demo/: cli.py
