[tool.poetry]
name = "csv-glue-demo"
version = "0.1.0"
description = "Examples of csv data files with glue"
authors = ["Chris Ottinger <datwiz@coco.id.au>"]
license = "MIT"

[tool.poetry.scripts]
csv-glue-demo = 'csv_glue_demo.cli:app'

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.12"
typer = "^0.4.1"
pandas = "^1.4.2"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
